# cactusbench

./: .gitignore  INDEX.json  README.md  SOTA-PLAN.md  audit_viewer.html  leaderboard.json  nubbin_year_test.html
base/: .dockerignore  Dockerfile
base/pkg/: README.md  pyproject.toml
base/pkg/src/saguaro_bench_env/: __init__.py  cli.py  env.py  prompts.py  scoring.py  tools.py
docs/: CONTAMINATION.md  MANIFEST.md  NOISE-FLOOR-STUDY.md  REFRESH.md  SHEET-AUDIT.md  TEST-MATRIX.md
harness/: README.md  home_agents.json  home_driver.py  models.json  openrouter.py  providers.py  run.py  tools.py
scripts/: aggregate.py  build_tasks.py  failure_taxonomy.py  launch_bench_v2.sh  launch_bench_v2b.sh  rescore.py  stratify.py
scripts/lib/: brief.py  score.py  scrub.py
tasks/: INDEX.json
tasks/15-100/: task.toml
tasks/15-104/: task.toml
tasks/15-108/: task.toml
tasks/15-109/: task.toml
tasks/15-111/: task.toml
tasks/15-112/: task.toml
tasks/15-66/: task.toml
tasks/15-67/: task.toml
tasks/15-75/: task.toml
tasks/15-80/: task.toml
tasks/15-81/: task.toml
tasks/28-02A/: task.toml
tasks/28-07A/: task.toml
tasks/28-100/: task.toml
tasks/28-108/: task.toml
tasks/28-109/: task.toml
tasks/28-112/: task.toml
tasks/40-01A/: task.toml
tasks/40-04/: task.toml
tasks/40-04A/: task.toml
tasks/40-05/: task.toml
tasks/40-102/: task.toml
tasks/40-105/: task.toml
tasks/40-107/: task.toml
tasks/40-108/: task.toml
tasks/40-121/: task.toml
tasks/40-12A/: task.toml
tasks/41B-01/: brief.md  instruction.md  (+2 more)
tasks_public/: leaderboard.json
(+411 files in other folders)
